--- a/Rects/Rects.csproj
+++ b/Rects/Rects.csproj
@@ -44,14 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Circle.cs" />
+    <Compile Include="ColorUtils.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MathUtils.cs" />
+    <Compile Include="Point.cs" />
+    <Compile Include="Pointu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Raytraceable.cs" />
+    <Compile Include="RaytraceableCircle.cs" />
+    <Compile Include="RaytraceableGradient.cs" />
+    <Compile Include="Scene.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
