--- a/Rects/Rects.csproj
+++ b/Rects/Rects.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MathUtils.cs" />
+    <Compile Include="Matrix33.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Pointu.cs" />
     <Compile Include="Program.cs" />
