--- a/Rects/Rects.csproj
+++ b/Rects/Rects.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Raytraceable.cs" />
     <Compile Include="RaytraceableCircle.cs" />
     <Compile Include="RaytraceableGradient.cs" />
+    <Compile Include="RTRectangle.cs" />
     <Compile Include="Scene.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
