--- a/Rects/Rects.csproj
+++ b/Rects/Rects.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BBox.cs" />
     <Compile Include="Circle.cs" />
     <Compile Include="ColorUtils.cs" />
     <Compile Include="Form1.cs">
@@ -58,6 +59,7 @@
     <Compile Include="Pointu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuadTree.cs" />
     <Compile Include="Raytraceable.cs" />
     <Compile Include="RaytraceableCircle.cs" />
     <Compile Include="RaytraceableGradient.cs" />
